--- a/MyLinq/MyLinq.csproj
+++ b/MyLinq/MyLinq.csproj
@@ -41,7 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DbQueryProvider.cs" />
+    <Compile Include="ExpressionVisitor.cs" />
+    <Compile Include="ObjectReader.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query.cs" />
+    <Compile Include="QueryProvider.cs" />
+    <Compile Include="QueryTranslator.cs" />
+    <Compile Include="TypeSystem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
