--- a/MyLinq/MyLinq.csproj
+++ b/MyLinq/MyLinq.csproj
@@ -41,19 +41,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColumnDeclaration.cs" />
+    <Compile Include="ColumnExpression.cs" />
     <Compile Include="ColumnProjection.cs" />
     <Compile Include="ColumnProjector.cs" />
+    <Compile Include="DbExpressionType.cs" />
+    <Compile Include="DbExpressionVisitor.cs" />
     <Compile Include="DbQueryProvider.cs" />
     <Compile Include="Evaluator.cs" />
     <Compile Include="ExpressionVisitor.cs" />
     <Compile Include="ObjectReader.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="ProjectedColumns.cs" />
+    <Compile Include="ProjectionBuilder.cs" />
+    <Compile Include="ProjectionExpression.cs" />
     <Compile Include="ProjectionReader.cs" />
     <Compile Include="ProjectionRow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query.cs" />
+    <Compile Include="QueryBinder.cs" />
+    <Compile Include="QueryFormatter.cs" />
     <Compile Include="QueryProvider.cs" />
-    <Compile Include="QueryTranslator.cs" />
+    <Compile Include="QueryTranslator.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="SelectExpression.cs" />
+    <Compile Include="TableExpression.cs" />
     <Compile Include="TranslateResult.cs" />
     <Compile Include="TypeSystem.cs" />
   </ItemGroup>
